[gd_scene load_steps=69 format=3 uid="uid://d1001ii314vly"]

[ext_resource type="Script" uid="uid://cptafcit457xi" path="res://Assets/Enemies/Minotaur/minotaur.gd" id="1_n8nhx"]
[ext_resource type="PackedScene" uid="uid://vssh1p80uxnj" path="res://Assets/Enemies/BasicSkeleton/basic_skeleton.tscn" id="3_3xsit"]
[ext_resource type="Texture2D" uid="uid://5kuyyld0jx7o" path="res://Assets/Sprites/goatman.png" id="3_6smlg"]
[ext_resource type="PackedScene" uid="uid://dklpobami1hkg" path="res://Assets/Enemies/PoisonousBat/poisonous_bat.tscn" id="4_ik8mj"]
[ext_resource type="PackedScene" uid="uid://ctews1r14aqyh" path="res://Assets/Enemies/UndeadAxeman/undead_axeman.tscn" id="4_qp4xt"]
[ext_resource type="PackedScene" uid="uid://cxk0mg0y5qdi0" path="res://Assets/Enemies/UndeadSwordsmanArmour/undead_swordsman.tscn" id="5_maes3"]
[ext_resource type="Script" uid="uid://bqjthq5jbw7og" path="res://Assets/Scripts/loot_component.gd" id="6_ekckx"]
[ext_resource type="PackedScene" uid="uid://dypup8xitfyuf" path="res://Assets/Gold/golden_deer.tscn" id="7_ekckx"]
[ext_resource type="Script" uid="uid://d3enncgxl66lu" path="res://Assets/Scripts/health_component.gd" id="8_qp4xt"]
[ext_resource type="Script" uid="uid://bhaiij1tfp7v6" path="res://Assets/Scripts/hurtbox.gd" id="11_u3cjf"]

[sub_resource type="CircleShape2D" id="CircleShape2D_t3ldh"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_fa6de"]
radius = 12.0
height = 36.0

[sub_resource type="AtlasTexture" id="AtlasTexture_3xsit"]
atlas = ExtResource("3_6smlg")
region = Rect2(0, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ik8mj"]
atlas = ExtResource("3_6smlg")
region = Rect2(64, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_a1did"]
atlas = ExtResource("3_6smlg")
region = Rect2(128, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_rrur1"]
atlas = ExtResource("3_6smlg")
region = Rect2(192, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_qwjry"]
atlas = ExtResource("3_6smlg")
region = Rect2(256, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_yg72y"]
atlas = ExtResource("3_6smlg")
region = Rect2(320, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_4tvjg"]
atlas = ExtResource("3_6smlg")
region = Rect2(0, 256, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ferej"]
atlas = ExtResource("3_6smlg")
region = Rect2(64, 256, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_mh1ty"]
atlas = ExtResource("3_6smlg")
region = Rect2(128, 256, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_lrew0"]
atlas = ExtResource("3_6smlg")
region = Rect2(192, 256, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_jkghv"]
atlas = ExtResource("3_6smlg")
region = Rect2(256, 256, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_k56iu"]
atlas = ExtResource("3_6smlg")
region = Rect2(320, 256, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_fkscm"]
atlas = ExtResource("3_6smlg")
region = Rect2(0, 320, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_pmdq5"]
atlas = ExtResource("3_6smlg")
region = Rect2(64, 320, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_dae1i"]
atlas = ExtResource("3_6smlg")
region = Rect2(128, 320, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_dkojy"]
atlas = ExtResource("3_6smlg")
region = Rect2(192, 320, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_bqinj"]
atlas = ExtResource("3_6smlg")
region = Rect2(0, 448, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_rr0fu"]
atlas = ExtResource("3_6smlg")
region = Rect2(64, 448, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_54hck"]
atlas = ExtResource("3_6smlg")
region = Rect2(128, 448, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_c53tr"]
atlas = ExtResource("3_6smlg")
region = Rect2(0, 256, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_7rbr7"]
atlas = ExtResource("3_6smlg")
region = Rect2(192, 256, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ob6ww"]
atlas = ExtResource("3_6smlg")
region = Rect2(256, 256, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_qdyv2"]
atlas = ExtResource("3_6smlg")
region = Rect2(320, 256, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_rogne"]
atlas = ExtResource("3_6smlg")
region = Rect2(0, 320, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_6sd0h"]
atlas = ExtResource("3_6smlg")
region = Rect2(128, 320, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_3vbxn"]
atlas = ExtResource("3_6smlg")
region = Rect2(192, 320, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ykkyn"]
atlas = ExtResource("3_6smlg")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_i71i8"]
atlas = ExtResource("3_6smlg")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_jp5re"]
atlas = ExtResource("3_6smlg")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_dqx2s"]
atlas = ExtResource("3_6smlg")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_as4vs"]
atlas = ExtResource("3_6smlg")
region = Rect2(256, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_1dy4x"]
atlas = ExtResource("3_6smlg")
region = Rect2(0, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_3ww04"]
atlas = ExtResource("3_6smlg")
region = Rect2(64, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_pssrc"]
atlas = ExtResource("3_6smlg")
region = Rect2(128, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ynlsv"]
atlas = ExtResource("3_6smlg")
region = Rect2(192, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_3hia7"]
atlas = ExtResource("3_6smlg")
region = Rect2(256, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_gogym"]
atlas = ExtResource("3_6smlg")
region = Rect2(320, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_6nl5b"]
atlas = ExtResource("3_6smlg")
region = Rect2(0, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_jrbos"]
atlas = ExtResource("3_6smlg")
region = Rect2(64, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_mh6n1"]
atlas = ExtResource("3_6smlg")
region = Rect2(128, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_nkp56"]
atlas = ExtResource("3_6smlg")
region = Rect2(192, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_6smlg"]
atlas = ExtResource("3_6smlg")
region = Rect2(0, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_40bxs"]
atlas = ExtResource("3_6smlg")
region = Rect2(64, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_1tpk6"]
atlas = ExtResource("3_6smlg")
region = Rect2(128, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_olvqe"]
atlas = ExtResource("3_6smlg")
region = Rect2(192, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_m6o3h"]
atlas = ExtResource("3_6smlg")
region = Rect2(256, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_bu2is"]
atlas = ExtResource("3_6smlg")
region = Rect2(320, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_li4r2"]
atlas = ExtResource("3_6smlg")
region = Rect2(320, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_wsldm"]
atlas = ExtResource("3_6smlg")
region = Rect2(256, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_88rph"]
atlas = ExtResource("3_6smlg")
region = Rect2(192, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_3vpae"]
atlas = ExtResource("3_6smlg")
region = Rect2(128, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_h0sbr"]
atlas = ExtResource("3_6smlg")
region = Rect2(64, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_1uxxp"]
atlas = ExtResource("3_6smlg")
region = Rect2(0, 64, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_j4qsk"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_3xsit")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ik8mj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a1did")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rrur1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qwjry")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yg72y")
}],
"loop": false,
"name": &"attack",
"speed": 20.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_4tvjg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ferej")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mh1ty")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lrew0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jkghv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k56iu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fkscm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pmdq5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dae1i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dkojy")
}],
"loop": true,
"name": &"charge",
"speed": 22.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_bqinj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rr0fu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_54hck")
}],
"loop": false,
"name": &"damage",
"speed": 16.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_c53tr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7rbr7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ob6ww")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qdyv2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rogne")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6sd0h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3vbxn")
}],
"loop": true,
"name": &"dying",
"speed": 6.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ykkyn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i71i8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jp5re")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dqx2s")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_as4vs")
}],
"loop": true,
"name": &"idle",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_1dy4x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3ww04")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pssrc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ynlsv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3hia7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gogym")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6nl5b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jrbos")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mh6n1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nkp56")
}],
"loop": true,
"name": &"move",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_bqinj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rr0fu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_54hck")
}],
"loop": true,
"name": &"stunned",
"speed": 6.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_6smlg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_40bxs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1tpk6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_olvqe")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_m6o3h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bu2is")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_li4r2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wsldm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_88rph")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3vpae")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h0sbr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1uxxp")
}],
"loop": false,
"name": &"summon",
"speed": 7.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_yc8sv"]
radius = 12.0
height = 36.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_n0o3a"]
radius = 100.0
height = 200.0

[node name="Minotaur" type="CharacterBody2D" node_paths=PackedStringArray("nav", "hurtbox", "player_rays", "health_component", "loot_component") groups=["enemy"]]
scale = Vector2(0.9, 0.9)
motion_mode = 1
wall_min_slide_angle = 0.34906584
script = ExtResource("1_n8nhx")
nav = NodePath("Nav")
hitbox_shape = SubResource("CircleShape2D_t3ldh")
hurtbox = NodePath("AnimatedSprite2D/hurtBox")
summons = Array[PackedScene]([ExtResource("3_3xsit"), ExtResource("4_ik8mj"), ExtResource("4_qp4xt"), ExtResource("5_maes3")])
player_rays = [NodePath("RayCast2D"), NodePath("RayCast2D2"), NodePath("RayCast2D3")]
speed = 100.0
health_component = NodePath("HealthComponent")
loot_component = NodePath("LootComponent")
damage = 20.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 12)
shape = SubResource("CapsuleShape2D_fa6de")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_j4qsk")
animation = &"damage"
frame = 2
frame_progress = 1.0

[node name="hurtBox" type="Area2D" parent="AnimatedSprite2D"]
script = ExtResource("11_u3cjf")

[node name="CollisionShape2D" type="CollisionShape2D" parent="AnimatedSprite2D/hurtBox"]
position = Vector2(0, 12)
shape = SubResource("CapsuleShape2D_yc8sv")

[node name="Nav" type="NavigationAgent2D" parent="."]
path_postprocessing = 1
avoidance_enabled = true

[node name="Range" type="Area2D" parent="."]
collision_layer = 2

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Range"]
scale = Vector2(0.6, 0.6)
shape = SubResource("CapsuleShape2D_n0o3a")

[node name="RayCast2D" type="RayCast2D" parent="."]
position = Vector2(0, 12)
collision_mask = 15

[node name="RayCast2D2" type="RayCast2D" parent="."]
position = Vector2(0, 30)
collision_mask = 15

[node name="RayCast2D3" type="RayCast2D" parent="."]
position = Vector2(0, -6)
collision_mask = 15

[node name="LootComponent" type="Node" parent="."]
script = ExtResource("6_ekckx")
item_drop_scene = ExtResource("7_ekckx")
metadata/_custom_type_script = "uid://bqjthq5jbw7og"

[node name="HealthComponent" type="Node" parent="."]
script = ExtResource("8_qp4xt")
max_health = 400.0
metadata/_custom_type_script = "uid://d3enncgxl66lu"

[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
[connection signal="body_entered" from="Range" to="." method="_on_range_body_entered"]
[connection signal="body_exited" from="Range" to="." method="_on_range_body_exited"]
